# auto_notes

./: .env  .gitignore  README.md  api_example.py  asr_config.json  auto_study_server.py  benchmark_transcribe.py  canvas_for_refer.js  core_processor.py  env.example  pyproject.toml  requirements.txt  run_asr_denoise_compare.py  run_asr_preprocess_compare.py  run_funasr_compare.py  run_funasr_test.py  run_qwen_asr_test.py  run_transcribe_test.py  run_workflow.py  sjtu_live_qr_auto_score.js  sjtu_video_helper.js  stream_selector.py  transcriber.py  utils.py
docs/: API_DOCUMENTATION.md  ASR_SETUP_GUIDE.md  CONFLICT_RESOLUTION.md  PERFORMANCE_OPTIMIZATION.md  PROMPT_OPTIMIZATION.md  README.md  TASK_MANAGEMENT_GUIDE.md  USAGE_GUIDE.md
docs/audits/: 2026-03-16-task-pipeline-fix-validation.md
tests/: test_core_processor_download.py  test_server_regressions.py  test_transcriber_regressions.py
