[project]
name = "auto-notes"
version = "0.1.0"
description = "SJTU Canvas 隸ｾ遞玖伋蜉ｨ隨碑ｮｰ蜉ｩ謇具ｼ壻ｸ玖ｽｽ竊定ｽｬ蠖補̤AI隨碑ｮｰ逕滓姝"
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "flask-cors",
    "requests",
    "google-generativeai",
    "google-genai",
    "ffmpeg-python",
    "playwright",
    "faster-whisper",
    "python-dotenv",
]
